# matriculas

./: Procfile  db.sh  db.sqlite3  latest.dump  pyproject.toml  script.py
matriculas/: settings.py  urls.py
matriculas/matricula/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
matriculas/matricula/migrations/: 0001_initial.py  0002_alter_matricula_baptism_alter_matricula_document_and_more.py  0003_proof.py  0004_alter_proof_options.py  0005_nivel_subnivel_turma_catequista_matricula_turma.py  0006_alter_nivel_options_alter_subnivel_options_and_more.py  0007_alter_turma_dia.py
staticfiles/: staticfiles.json
templates/matricula/: base.html  cpf_display.html  cpf_not_validate.html  cpf_validate.html  proof_edit.html  proof_list.html
