[tool.poetry]
name = "catequese"
version = "0.1.0"
description = ""
authors = ["Thiago <thiago.costa@mateusmais.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
